--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="page-home">
 
   <header class="site-header">
-    <h1 class="title">Wild Rydes</h1>
+    <h1 class="title">Unicorn Rides</h1>
     <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <a class="home-button" href="/register.html">Giddy Up!</a>
+    <a class="home-button" href="/register.html">Get Ready for Wild ride Up!</a>
   </header>
 
   <section class="home-about">
@@ -40,7 +40,7 @@
       <div class="column">
         <div class="home-about-block">
           <h3 class="title icon-download">Download The App</h3>
-          <p class="content">Head over to the app store and download the Wild Rydes app. You’re just a few taps away from getting your ryde.</p>
+          <p class="content">Head over to the app store and download the UnicornRides app. You’re just a few taps away from getting your ryde.</p>
         </div>
       </div>
 
@@ -147,7 +147,7 @@
 
     <div class="row column">
       <div class="footer-legal">
-        &copy;WildRydes Inc<br>
+        &copy;UnicornRides Inc<br>
         All Rights Reserved
       </div>
     </div>
