--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <h2 class="section-title">Sign Up</h2>
 
-      <p class="content">Wild Rydes is coming soon! Enter your email to enter the limited private beta</p>
+      <p class="content">Unicorn Rides is coming soon! Enter your email to enter the limited private beta</p>
 
       <div class="apps">
         <a class="app-icon" href=""><img src="images/wr-home-apple.png"></a>
@@ -110,9 +110,9 @@
     <div class="row column medium-8 xxlarge-6">
       <div class="quote-wrap">
         <div class="quote">
-          “I was almost late to my ultimate frisbee tournament in DOLORES park. BUt Wild Rydes Got me there from the marina in under five minutes.”
+          “I was almost late to my ultimate frisbee tournament in DOLORES park. BUt Unicorn Rides Got me there from the marina in under five minutes.”
         </div>
-        <div class="quoter">- Satisfied Wild Rydes User</div>
+        <div class="quoter">- Satisfied UnicornRides User</div>
       </div>
     </div>
   </section>
